<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- App Name und Menu -->
    <string name="app_name">frooze</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>

    <string name="read_file">This app needs access to your file storage so that it can read video.</string>

    <!-- Anmeldung/Registrierung/Password Reset -->
    <string name="username">Username</string>
    <string name="signuptext">Don\'t have an account?&#160;</string>
    <string name="forgotpass">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="greeting">Hello there, welcome back</string>
    <string name="alreadysignedup">Already signed up? <font fgcolor='#0084ff'>Log in</font></string>
    <string name="onboarding">Get on Board</string>
    <string name="missingfullname">Please enter a Name</string>
    <string name="missingusername">Please enter an Username</string>
    <string name="usernameexists">Username already taken</string>
    <string name="missingmail">Please enter an E-Mail</string>
    <string name="missingpassword">Please enter a Password</string>
    <string name="verifyemail">Please verify your E-Mail before logging in</string>
    <string name="loginfail">Login failed! Please try again later</string>
    <string name="loginsuccessful">Logged in successfully!</string>
    <string name="registrationfail">Registration failed! Please try again later</string>
    <string name="registrationsuccessful">Signup successful. Verification email sent</string>
    <string name="fullname">Name</string>
    <string name="send">Send</string>
    <string name="create">Create</string>
    <string name="welcome">Welcome</string>
    <string name="nochange">This cannot be changed later</string>
    <string name="toolonguser">Username too long</string>

    <!-- No Internet -->
    <string name="nointernet">No Internet connection</string>
    <string name="nointernetdesc">You are not connected to the Internet \nMake sure WiFi is on, AirPlane Mode is off\nand try again.</string>
    <string name="reload">Reload</string>

    <!-- Post Activity-->
    <string name="post">Post</string>
    <string name="description">Description</string>
    <string name="newpost">New Post</string>
    <string name="textcolor">Text Farbe auswählen</string>

    <!-- Support Mail -->
    <string name="yourproblem">Your Problem:</string>
    <string name="emailsent">E-Mail sent</string>
    <string name="emailnotsent">E-Mail not sent</string>

    <!-- Premium -->
    <string name="noads"><font fgcolor='#0084ff'>•</font> No Ads</string>
    <string name="newfeatures"><font fgcolor='#0084ff'>•</font> New features</string>
    <string name="longervideos"><font fgcolor='#0084ff'>•</font> Longer videos</string>
    <string name="premiumbuttontext">Buy for </string>

    <!-- Comments -->
    <string name="comments">Comments</string>
    <string name="commenthint">Comment…</string>
    <string name="empty">Cannot be empty</string>

    <!-- New Post -->
    <string name="uploading">Uploading</string>
    <string name="source">Source</string>
    <string name="selectcamera">Video aufnehmen</string>
    <string name="pickvideo">Video aus Gallerie wählen</string>
    <string name="novideoselected">No video selected</string>
    <string name="toolong">Video too long, max is 17 seconds</string>
    <string name="success">Video uploaded successfully</string>
    <string name="fail">Video upload failed</string>
    <string name="permrequired">Permission required</string>
    <string name="permdesc">To upload videos we need access to your Gallery</string>
    <string name="dangerousactivities">Dangerous activities shown?</string>

    <!-- Post -->
    <string name="disclaimer">Dangerous activities, do not attempt.\n</string>
    <string name="noposts">No posts</string>
    <!-- Sharing -->
    <string name="sharetext">Check out this video on frooze.ch by @</string>
    <string name="sortbynew">New</string>
    <string name="sortbytrending">Trending</string>
    <string name="sortbyfollowing">Following</string>

    <!-- Intro -->
    <string name="dtlike">Double tap to like</string>
    <string name="wholemenu">Tap &lt; to view the whole menu</string>
    <string name="tapprofile">Tap profile picture to view profile</string>
    <string name="viewhashtag">View a hashtag by tapping it</string>
    <string name="thatsall">That\'s all</string>
    <string name="shortintroduction">(Really) short introduction</string>
    <string name="searchexpl">Here you can view Users and Hashtags. Just tap on either Users or Hashtags.\nTo go to an User, just tap the card.</string>
    <string name="yourprofile">Your Profile</string>
    <string name="editprofileexpl">To edit your profile just tap on the Pen. When you\'re done press done</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="oss">Open Source Licenses</string>
    <string name="ppolicy">Privacy Policy</string>
    <string name="logout">Log out</string>
    <string name="deleteacc">Delete account</string>

    <string name="getpremium">Get frooze <b><font fgcolor='#0084ff'>Blue</font></b></string>
    <string name="chooseemail">Send Email</string>
    <string name="deleteaccconfirm">Are you sure?\nThis cannot be undone</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accountdeleted">Account deleted</string>

    <!-- Profile -->
    <string name="unfollow">Unfollow</string>
    <string name="ifollow">I follow</string>

    <string name="followers">Fans</string>
    <string name="likes">Likes</string>
    <string name="editprofile">Edit Profile</string>
    <string name="taptoedit">Tap any item to edit</string>
    <string name="bioplaceholder">This is your Bio, tap to edit</string>
    <string name="somethingwentwrong">Something went wrong</string>
    <string name="noimageselected">No Image selected</string>
    <string name="follow">Follow</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="followingyou">started following you</string>
    <string name="likedyourpost">liked your post</string>
    <string name="trending">Congrats, you\'re trending</string>
    <string name="commented">commented:</string>

    <!-- Search -->
    <string name="searchhint">Search…</string>
    <string name="notificationstab">Notifs</string>

    <string name="cancel">Cancel</string>
    <string name="save">Ok</string>
    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>

    <string name="permstorage">Required to pick videos from Gallery</string>
    <string name="permcamera">Required to record video</string>

    <string name="signupconfirm">If you continue, you accept frooze\'s &lt;a href=https://frooze.ch/?page_id=83621>terms of use&lt;/a> and confirm that you have read our &lt;a href=https://frooze.ch/?page_id=83575>privacy policy&lt;/a>.</string>

    <string name="twitter_consumer_key" translatable="false">5b58Ow8AVJfdv89KZIzBoJ6Jj</string>
    <string name="twitter_consumer_secret" translatable="false">Tx1tcn03GvNodHnO2335PUGguDw3LDCetFUb662UNmnYzIoqhS</string>

    <!-- Rating -->
    <string name="rate_dialog_title">Rate us</string>
    <string name="rate_dialog_message">If you enjoy using %s, please help us by rating it. It only takes a few seconds!</string>
    <string name="rate_dialog_action_rate">Rate</string>
    <string name="rate_dialog_action_never">No, thanks</string>
    <string name="rate_dialog_action_later">Later</string>
    <string name="rate_dialog_thank_you">Thank you!</string>

    <string-array name="exploretabs">
        <item>New</item>
        <item>Trending</item>
        <item>Following</item>
    </string-array>

</resources>
