<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".PostActivity">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/searchappbar"
            android:id="@+id/toolbar">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/close"
                    android:background="@color/transparent"
                    android:layout_marginEnd="13dp"
                    android:tint="@color/white"
                    android:src="@drawable/ic_baseline_close_24"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newpost"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post"
                    android:id="@+id/post"
                    android:layout_alignParentEnd="true"

                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/white"/>

            </RelativeLayout>
        </Toolbar>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"

        android:layout_height="wrap_content"
        android:gravity="top">


            <VideoView
                android:id="@+id/video_added"
                android:layout_width="150dp"
                android:layout_height="230dp"
                android:layout_gravity="left"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="right"
            android:maxLines="4"
            android:maxLength="140"
            android:textColor="@color/black"
            android:hint="@string/description"
            android:id="@+id/description"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Switch
        android:id="@+id/dangerousswitch"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/dangerousactivities"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000000"
        android:textSize="18sp" />
<Button
    android:id="@+id/textcolor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:backgroundTint="@color/white"
    android:textColor="@color/black"
    android:textAllCaps="false"
    android:text="@string/textcolor"/>
</LinearLayout>