<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="#00cefa"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="bottom|center"
            android:src="@drawable/noconnectionwaves"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:layout_marginTop="80dp"
            android:layout_gravity="top|center"
            android:src="@drawable/noconnectionbirdcloudstring"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="bottom|center_horizontal"
    android:layout_marginBottom="100dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nointernet"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nointernetdesc"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reload"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:background="@drawable/reload_button"
            android:layout_gravity="bottom|center_horizontal"/>
</LinearLayout>
    </FrameLayout>

</LinearLayout>