<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/searchappbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <ImageButton
            android:id="@+id/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:rotation="-90"
            android:src="@drawable/jz_click_back_selector"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="normal" />
    </androidx.appcompat.widget.Toolbar>


    <Button
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        app:rippleColor="#00FFFFFF"
        android:text="Support"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"

        android:textColor="@color/black"
        android:textSize="18sp"
        app:icon="@drawable/ic_help_outline_black_24dp"
        app:iconTint="@color/alpha60_black" />
    <Button
        android:id="@+id/privacypolicy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/ppolicy"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:rippleColor="#00FFFFFF"
        app:icon="@drawable/ic_baseline_fingerprint_24"
        app:iconTint="@color/alpha60_black" />
    <Button
        android:id="@+id/oss"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/oss"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:rippleColor="#00FFFFFF"
        app:icon="@drawable/ic_description_black_24dp"
        app:iconTint="@color/alpha60_black" />
    <Button
        android:id="@+id/defaulttab"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/defaulttab"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:rippleColor="#00FFFFFF"
        app:icon="@drawable/ic_baseline_library_music_24"
        app:iconTint="@color/alpha60_black" />
    <Button
        android:id="@+id/reviewtest"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="60dp"
        android:text="Test Review"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:rippleColor="#00FFFFFF"
        app:iconTint="@color/alpha60_black" />
    <Button
        android:id="@+id/getpremium"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="gone"
        android:text="@string/getpremium"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        app:iconSize="40dp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="18sp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:rippleColor="#00FFFFFF"
        app:icon="@drawable/ic_star_black_24dp"
        app:iconTint="#2962FF" />


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/delete"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        app:rippleColor="#00FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:text="@string/logout"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:icon="@drawable/ic_exit_to_app_black_24dp"
        app:iconTint="@color/alpha60_black"
 />

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        app:rippleColor="#00FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:text="@string/deleteacc"
        android:elevation="2dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/ms_red"
        android:textSize="18sp"
        android:layout_above="@+id/credits"

        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:icon="@drawable/ic_delete_black_24dp"
        app:iconTint="#FF0000" />

        <TextView
            android:id="@+id/credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</LinearLayout>