<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/froozeblue"
        android:orientation="vertical">

<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:outlineAmbientShadowColor="@color/transparent"
    android:outlineSpotShadowColor="@color/transparent"
    android:background="@color/transparent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/searchappbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/ffffffff"
            android:background="@color/transparent"
            android:src="@drawable/jz_click_back_selector"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:layout_toEndOf="@id/backbutton"
            android:text="@string/editprofile"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/ffffffff"
            android:textSize="25sp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/donebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/done"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/ffffffff"
            android:textSize="25sp"
            android:textStyle="normal" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:background="@drawable/profileframe"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/framelinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    app:roundAsCircle="true"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    tools:context="com.thilojaeggi.frooze.ProfileFragment"
                    android:layout_gravity="left"
                    android:layout_marginStart="10dp"
                    />
                <EditText
                    android:id="@+id/fullnameedittext"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="30dp"
                    android:text="Name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <EditText
                android:id="@+id/bioedittext"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:layout_gravity="end"
                android:layout_marginTop="50dp"
                android:layout_marginStart="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:layout_toEndOf="@+id/framelinear"
                android:text="Bio"
                android:layout_marginBottom="15dp"
                android:textSize="17sp"
                android:textStyle="normal" />


        </RelativeLayout>
    </FrameLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/taptoedit"
        android:textStyle="bold"
        android:textSize="20sp"/>
    </LinearLayout>